--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <div class="text-box">
                 <h1>World's Biggest University</h1>
                 <p>Make website is now one of the easiest thing in the world. You just need
-                    to learn HTML, CSS, Javascript and you are good to go.
+                    to learn HTML, CSS, <br> Javascript and you are good to go.
                 </p>
-                <a href="">Visit Us To Know More</a>
+                <a href="" class="hero-btn">Visit Us To Know More</a>
             </div>
         </section>
 
