--- a/index.html
+++ b/index.html
@@ -32,5 +32,38 @@
             </div>
         </section>
 
+        <!-- Course-->
+        <section class="course">
+            <h1>Course We Offer</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipicscing elit.</p>
+
+            <div class="row">
+                <div class="course-col">
+                    <h3>Intermediate</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipicscing elit.
+                        Pallentesque aliquet turplis nulla, eleifend, faucibus est
+                        sollicitudin ut. Maecenas ut venenatis ex, et dapibus purus
+                        Donec sit.
+                    </p>
+                </div>
+                <div class="course-col">
+                    <h3>Degree</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipicscing elit.
+                        Pallentesque aliquet turplis nulla, eleifend, faucibus est
+                        sollicitudin ut. Maecenas ut venenatis ex, et dapibus purus
+                        Donec sit.
+                    </p>
+                </div>
+                <div class="course-col">
+                    <h3>Post Graduation</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipicscing elit.
+                        Pallentesque aliquet turplis nulla, eleifend, faucibus est
+                        sollicitudin ut. Maecenas ut venenatis ex, et dapibus purus
+                        Donec sit.
+                    </p>
+                </div>
+            </div>
+        </section>
+
     </body>
 </html>
