add campus facilities

--- a/index.html
+++ b/index.html
@@ -65,5 +65,59 @@
             </div>
         </section>
 
+        <!-- Campus-->
+        <section class="campus">
+            <h1>Our Global Campus</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipicscing elit.</p>
+
+            <div class="row">
+                <div class="campus-col">
+                    <img src="images/london.png" alt="London">
+                    <div class="layer">
+                        <h3>LONDON</h3>
+                    </div>
+                </div>
+                <div class="campus-col">
+                    <img src="images/newyork.png" alt="New York">
+                    <div class="layer">
+                        <h3>NEW YORK</h3>
+                    </div>
+                </div>
+                <div class="campus-col">
+                    <img src="images/washington.png" alt="Washington">
+                    <div class="layer">
+                        <h3>WASHINGTON</h3>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Facilities-->
+        <section class="facilities">
+            <h1>Our Facilities</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipicscing elit.</p>
+            
+            <div class="row">
+                <div class="facilities-col">
+                    <img src="images/library.png" alt="Library">
+                    <h3>World Class Library</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipicscing elit.
+                        Pellentensque aliquet turplis nulla</p>
+                </div>
+                <div class="facilities-col">
+                    <img src="images/basketball.png" alt="Basketball">
+                    <h3>World Class Library</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipicscing elit.
+                        Pellentensque aliquet turplis nulla</p>
+                </div>
+                <div class="facilities-col">
+                    <img src="images/library.png" alt="Library">
+                    <h3>World Class Library</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipicscing elit.
+                        Pellentensque aliquet turplis nulla</p>
+                </div>
+            </div>
+        </section>
+
     </body>
 </html>
