add testimonial and cta

--- a/index.html
+++ b/index.html
@@ -119,5 +119,38 @@
             </div>
         </section>
 
+        <!-- Testimonials-->
+        <section class="testimonials">
+            <h1>What Our Students Say</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipicscing elit.</p>
+            
+            <div class="row">
+                <div class="testimonial-col">
+                    <img src="images/user1.jpg" alt="User1">
+                    <div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipicscing elit.
+                            Pallentesque aliquet turplis nulla, eleifend, faucibus est
+                            sollicitudin ut. Maecenas ut venenatis ex, et dapibus purus</p>
+                        <h3>Christine Berkley</h3>
+                    </div>
+                </div>
+                <div class="testimonial-col">
+                    <img src="images/user2.jpg" alt="User2">
+                    <div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipicscing elit.
+                            Pallentesque aliquet turplis nulla, eleifend, faucibus est
+                            sollicitudin ut. Maecenas ut venenatis ex, et dapibus purus</p>
+                        <h3>David Byer</h3>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!--Call to action-->
+        <section class="cta">
+            <h1>Enroll For Our Various Online Courses <br> Anywhere From The World</h1>
+            <a href="" class="hero-btn">CONTACT US</a>
+        </section>
+
     </body>
 </html>
