update icons star brand anything

--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
                 </div>
                 <div class="facilities-col">
                     <img src="images/basketball.png" alt="Basketball">
-                    <h3>World Class Library</h3>
+                    <h3>Largest Playground</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipicscing elit.
                         Pellentensque aliquet turplis nulla</p>
                 </div>
                 <div class="facilities-col">
-                    <img src="images/library.png" alt="Library">
-                    <h3>World Class Library</h3>
+                    <img src="images/cafeteria.png" alt="Cafeteria">
+                    <h3>Tasty and Healthy Food</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipicscing elit.
                         Pellentensque aliquet turplis nulla</p>
                 </div>
@@ -137,6 +137,11 @@
                             Pallentesque aliquet turplis nulla, eleifend, faucibus est
                             sollicitudin ut. Maecenas ut venenatis ex, et dapibus purus</p>
                         <h3>Christine Berkley</h3>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star-o" aria-hidden="true"></i>
                     </div>
                 </div>
                 <div class="testimonial-col">
@@ -146,6 +151,11 @@
                             Pallentesque aliquet turplis nulla, eleifend, faucibus est
                             sollicitudin ut. Maecenas ut venenatis ex, et dapibus purus</p>
                         <h3>David Byer</h3>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star-half-o" aria-hidden="true"></i> 
                     </div>
                 </div>
             </div>
@@ -163,6 +173,13 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipicscing elit.
                 Pallentesque aliquet turplis nulla, eleifend, faucibus est <br>
                 sollicitudin ut. Maecenas ut venenatis ex, et dapibus purus</p>
+            <div class="icons">
+                <i class="fa fa-facebook" aria-hidden="true"></i>
+                <i class="fa fa-twitter" aria-hidden="true"></i>
+                <i class="fa fa-instagram" aria-hidden="true"></i>
+                <i class="fa fa-linkedin" aria-hidden="true"></i>
+            </div>
+            <p>Made with <i class="fa fa-heart-o" aria-hidden="true"></i> by Easy Tutorials</p>
         </section>
         
         <script>
