--- a/contact.html
+++ b/contact.html
@@ -29,29 +29,53 @@
                 <i class="fa fa-bars" onclick="showMenu()"></i>
             </nav>
 
-            <h1>About Us</h1>
+            <h1>Contact Us</h1>
         </section>
 
-        <!-- about us content -->
-        <section class="about-us">
+        <!--contact us-->
+        <section class="location">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d54382.93793990996!2d108.0079276650844!3d14.037748634468008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x316c1e405572c6a5%3A0xda775e3da9e57d59!2zQmnhu4NuIEjhu5MsIFRwLiBQbGVpa3UsIEdpYSBMYWksIFZp4buHdCBOYW0!5e0!3m2!1svi!2s!4v1633946596691!5m2!1svi!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            
+        </section>
+
+        <section class="contact-us">
             <div class="row">
-                <div class="about-col">
-                    <h1>We are the world's largest university</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipicscing elit.
-                        Pallentesque aliquet turplis nulla, eleifend, faucibus est
-                        sollicitudin ut. Maecenas ut venenatis ex, et dapibus purus.
-                        Donec sit amet nisl non justo malesuada fermentum. Donec eget 
-                        felis dolor. Suspendisse condimentum vestibulum ex ac cursus. Nam 
-                        pharetra viverra efficitus. Sed pellentesque luctus arcu, quis
-                        finibus nibh luctus mattis.</p>
-                        <a href="" class="hero-btn red-btn">EXPLORE NOW</a>
+                <div class="contact-col">
+                    <div>
+                        <i class="fa fa-home" aria-hidden="true"></i>
+                        <span>
+                            <h5>XYZ Road, ABC Building</h5>
+                            <p>Pleiku City, Vietnam</p>
+                        </span>
+                    </div>
+                    <div>
+                        <i class="fa fa-phone" aria-hidden="true"></i>
+                        <span>
+                            <h5>+84 0905 178 178</h5>
+                            <p>Monday to Saturday, 10AM to 6PM</p>
+                        </span>
+                    </div>
+                    <div>
+                        <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                        <span>
+                            <h5>info@dientran.com</h5>
+                            <p>Email us your query</p>
+                        </span>
+                    </div>
                 </div>
-                <div class="about-col">
-                    <img src="images/about.jpg" alt="About">
+                <div class="contact-col">
+                    <form action="">
+                        <input type="text" placeholder="Enter your name" required>
+                        <input type="email" placeholder="Enter email address" required>
+                        <input type="text" placeholder="Enter your subject" required>
+                        <textarea rows="8" placeholder="Message" required></textarea>
+                        <button type="submit" class="hero-btn red-btn">Send Message</button>
+
+                    </form>
                 </div>
+
             </div>
         </section>
-
 
 
 
